# LeafMiner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  email_work_summary.md  email_work_summary.txt  pyproject.toml
.github/workflows/: ci.yml  docker.yml
conda-recipes/: meta.yaml
scripts/: __init__.py  aggregate_for_saba.py  build_supplemented_gtf.sh  generate_example_outputs.py  generate_summary_for_saba.py  gtex_gct_to_bed.py  lc2_pipeline.py  longorf_to_gtf.py  merge_tissue_results.py  pe_inclusion_analysis.py  recount3_to_bed.py  recount3_to_star_sj.py  rename_gtf_seqnames.py  run_zebrafish_full_chain.py  setup_grcz11_longorf_chain.sh  setup_grcz12_refs.sh  validate_gtf_for_lc2.py  zebrafish_project_runs.py  zebrafish_quest_pipeline.py
tests/: smoke_validate_gtf.sh  test_smoke.py
tests/fixtures/: README.md  sample.SJ.out.tab
tools/leafcutter2/scripts/: ForwardSpliceJunctionClassifier.py  leafcutter2.py
webapp/: README.md
webapp/backend/: main.py
webapp/frontend/: index.html
